Fixed overflow bug.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,6 @@
 .main-container {
     display: flex;
     flex-direction: column;
-    width: 100%;
     height: 100vh;
     min-width: 400px;
     min-height: 350px;
